added reset feature and download image from node

--- a/etch-a-sketch/src/template.html
+++ b/etch-a-sketch/src/template.html
@@ -17,8 +17,8 @@
     </div>
     <div class="main-content">
       <div class="btns">
-        <button class="resetBtn">Reset</button>
-        <button class="downloadBtn">Download</button>
+        <button class="reset">Reset</button>
+        <button class="downloadBtn" download="image.png">Download</button>
       </div>
       <div class="container"></div>
     </div>
