added logic touches

--- a/tic-tac-toe/src/template.html
+++ b/tic-tac-toe/src/template.html
@@ -16,7 +16,7 @@
       <h1>tic tac toe</h1>
     </section>
     <section class="display">
-      Player<span class="currentPlayer"></span>'s turn
+      Player <span class="currentPlayer">X</span>'s turn
     </section>
     <section class="container">
       <div class="tile"></div>
