finalized tic tac toe design and logic

--- a/tic-tac-toe/src/template.html
+++ b/tic-tac-toe/src/template.html
@@ -29,6 +29,7 @@
       <div class="tile"></div>
       <div class="tile"></div>
     </section>
+    <section class="winner"></section>
     <section class="reset">
       <button>reset</button>
     </section>
