--- a/to-do-list/src/index.html
+++ b/to-do-list/src/index.html
@@ -23,10 +23,30 @@
     
     </nav>
     <section id="main">
-      <div class="container border p-12 rounded border-opacity-40 flex flex-col px-6 mx-auto mt-20 w-2/5 h-full text-white space-y-3">
-        <p class="text-3xl border-b border-opacity-60">Genesis's Tasks</p>
-        <div class='text-xs opacity-60'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-        <a class="text-xs add-task rounded-full bg-accent py-2 px-4 text-center w-28"> + Add Task</a>
+      <!-- Main Content -->
+      <div class="container border p-12 rounded border-opacity-40 flex flex-col px-6 mx-auto mt-20 w-2/5 min-h-full text-white space-y-3">
+          <p class="max-w-md text-3xl border-b border-opacity-60">Genesis's Tasks</p>
+          <div class='text-xs opacity-60'>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+          <a class="text-xs add-task rounded-full bg-accent py-2 px-4 text-center w-28"> + Add Task</a>
+        <!-- Categories -->
+          <div class='categories'>
+            <div class="daily"> 
+            <p class="max-wd-md text-2xl border-b border-opacity-60"> Daily Tasks</p>
+            <ul class='flex flex-col justify-center ml-3 text-s opacity-75 space-y-2 my-4'>
+              <li> <input type="checkbox"> Task #1 </li>
+              <li> <input type="checkbox"> Task #2 </li>
+              <li> <input type="checkbox"> Task #3 </li>
+            </ul>
+          </div>
+            <div class="other"> 
+            <p class="max-wd-md text-2xl border-b border-opacity-60"> Other Tasks</p>
+            <ul class='flex flex-col justify-center ml-3 text-s opacity-75 space-y-2 my-4'>
+              <li> <input type="checkbox"> Task #1 </li>
+              <li> <input type="checkbox"> Task #2 </li>
+              <li> <input type="checkbox"> Task #3 </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
   </body>
