Added weather API

--- a/weather/src/index.html
+++ b/weather/src/index.html
@@ -26,10 +26,11 @@
           <input
             type="text"
             id="search-input"
-            class="rounded-full bg-white text-whit p-2 flex-1 w-full pl-6"
-            placeholder="Manila"
+            class="rounded-full bg-white text-background p-2 flex-1 w-full pl-6"
+            placeholder="Search"
+            value="Tokyo"
           />
-          <button id="search-btn" class="bg-transparent p-4 rounded-full">
+          <button id="search-btn" class="bg-transparent p-4 text-primary">
             Search
           </button>
         </div>
