changed and hide the key

--- a/weather/src/index.html
+++ b/weather/src/index.html
@@ -36,7 +36,11 @@
         </div>
         <div id="weather" class="space-y-2">
           <h1 class="text-3xl" id="city">Weather In Manila</h1>
-          <!-- <img src="src/tae.jpeg" alt='lol'> -->
+          <img
+            src="http://openweathermap.org/img/wn/10d@2x.png"
+            alt="lol"
+            id="icon"
+          />
           <div id="temp">51 degrees</div>
           <div id="description">Cloudy</div>
           <div id="humidity">Humidity:60%</div>
