finished distance calculation logic

--- a/iss/src/index.html
+++ b/iss/src/index.html
@@ -24,9 +24,12 @@
   </head>
 
   <body class="text-white flex flex-col">
-    <nav class="bg-background flex py-6 pl-6">logo</nav>
+    <nav class="bg-background flex py-6 pl-6">ISS Distance Calculator</nav>
     <section class="main min-h-screen items-center justify-center">
       <div id="map"></div>
+      <div class="text-background text-center pt-6">
+        Distance between You and ISS: <span id="dist"></span> kilometers
+      </div>
       <div class="card p-6 rounded flex items-center justify-center min-h-full">
         <button class="px-8 py-4 rounded-full bg-primary" id="getbtn">
           How Far Is The ISS From My Loc?
